Fix double border when first row is selected

--- a/apps/frontend/scss/layout/auctions-table.scss
+++ b/apps/frontend/scss/layout/auctions-table.scss
@@ -10,7 +10,7 @@
     .selected {
         td {
             background: $highlight-background;
-            border-color: #fff;
+            border-color: #fff !important;
             border-top: 1px solid #fff;
         }
     }
